log
Thu, Apr 17, 2025  5:45:19 PM: 
 hashmap.c | 161 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 159 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
eeef3b7
Thu, Apr 17, 2025  5:46:03 PM: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  14|1
total_score: 60/70
d06e224
Thu, Apr 17, 2025  5:46:57 PM: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  16|1
total_score: 60/70
0c62f16
Thu, Apr 17, 2025  5:47:57 PM: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:228:12: error: 'true' undeclared (first use in this function)
     while (true) {
            ^~~~
hashmap.c:228:12: note: each undeclared identifier is reported only once for each function it appears in
f3ef708
Thu, Apr 17, 2025  5:48:13 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
3f98b0b
Thu, Apr 17, 2025  5:49:43 PM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  16|1
total_score: 60/70
52876df
Thu, Apr 17, 2025  5:50:27 PM: 
 hashmap.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
 tests:  16|1
total_score: 60/70
c5e0cab
Thu, Apr 17, 2025  5:53:54 PM: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  14|1
total_score: 60/70
f0a4d5f
Thu, Apr 17, 2025  5:55:03 PM: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  16|1
total_score: 60/70
9c5893a
